# Droplet_AUV_stack

./: .gitignore  CMakeLists.txt  README.md  TODOS.txt  package.xml  setup.py
action/: ActuateGripper.action  AttemptGrasp.action  MoveToPosition.action
launch/: breadcrumb_and_fisheye_on_robot.launch  controller_test_live_robot.launch  controller_test_live_robot_exposure_control.launch  make_breadcrumb_video.launch  start_world.launch  upload_auv_description.launch
models/aruco_0/: model.config  model.sdf
models/aruco_0/materials/scripts/: aruco_0.material
models/aruco_1/: model.config  model.sdf
models/aruco_1/materials/scripts/: aruco_1.material
models/aruco_2/: model.config  model.sdf
models/aruco_2/materials/scripts/: aruco_2.material
models/aruco_2/materials/textures/: aruco_2.png:Zone.Identifier
models/aruco_3/: model.config  model.sdf
models/aruco_3/materials/scripts/: aruco_3.material
models/fisheye-camera/: model.sdf
models/standard_block/: model.config  model.sdf
msg/: BreadcrumbLocalizationResult.msg  GlobalPositionControllerState.msg
param/: flir_senko_barbados2024_tank.yaml  flir_senko_land_calibration.yaml  pallet12.json  pallet4.json  pallet90.json  plan_hopping.json  plan_hopping_four.json  plan_out.json  plan_pallet4.json  spline_largest_eigens.splinter  stack4.json
robots/: uw_assembly_auv.gazebo.xacro  uw_assembly_auv.xacro  uw_assembly_auv_base.xacro  uw_assembly_auv_sensors.xacro
scripts/: manual_marker_update.py  test_pattern_flipper.py
src/: aruco_to_stag_node.py  assembly_process_manager.py  breadcrumb_localization_node.py  build_plan_parsing.py  droplet_underwater_assembly_libs  forward_stag_to_breadcrumb.py  global_position_controller.py  grasp_drop_simulator.py  gripper_handler_node.py  ui_tube_node.py
src/droplet_underwater_assembly_libs/: config.py  trajectory_tracker.py  utils.py
src/localization_informed_planning_sim_libs/: custom_smach_states.py  real_world_build_plan_constructor.py  simulation_build_plan_constructor.py  simulation_manager.py  ui_example.py  ui_tube_pattern_publisher.py  ui_tube_wrapper.py
srv/: PlungeAction.srv  SetControllerTarget.srv  SetGlobalPosition.srv
test_scripts/: .plot_errors.py.swp  large_errors_from_angle.py  plot_errors.py  plot_thrusts_updown.py  roll_pitch_publisher.py
tests/: show_recorded_positions_from_video.py
tests/paper_plots/: theoretical_analysis_pixel_noise.py
